02_EnhancedShockBurst_Rx.cydsn/BUILD.log
--------------- Build Started: 11/01/2017 00:01:44 Project: 02_EnhancedShockBurst_Rx, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Xwx47\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\Xwx47\Documents\Creator\nRF24_Example_Projects\02_EnhancedShockBurst_Rx.cydsn\02_EnhancedShockBurst_Rx.cyprj -d CY8C4045AZI-S413 -s C:\Users\Xwx47\Documents\Creator\nRF24_Example_Projects\02_EnhancedShockBurst_Rx.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0p\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:68:57: error: 'NRF_DATA_PIPE0' undeclared (first use in this function)
             uint8_t payload_size = nRF24_getPayloadSize(NRF_DATA_PIPE0);
                                                         ^
main.c:68:57: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/01/2017 00:03:18 ---------------
